--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,8 @@ phases:
   build:
     commands:
       - echo Deploying the application to AWS using Serverless Framework...
-      - serverless deploy -v
+      #- serverless deploy -v
+      - serverless deploy --debug
   post_build:
     commands:
       - echo Build completed successfully!
