--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,7 @@ phases:
     commands:
       - echo Deploying the application to AWS using Serverless Framework...
       - serverless deploy -v
+      - ls -lrt
       #- serverless deploy --debug
   post_build:
     commands:
